[package]
name = "svlm"
version = "0.1.0"
edition = "2021"
authors = ["Solana Vote Latency Monitor Team"]
description = "A monitoring system for tracking vote latency across Solana validators"
license = "MIT"
repository = "https://github.com/solana-vote-latency-monitor/svlm"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Solana SDK and client (updated for yellowstone-grpc-proto 8.0.0 compatibility)
solana-sdk = "2.3.1"
solana-client = "2.3.1"
solana-rpc-client = "2.3.1"
solana-rpc-client-api = "2.3.1"

# Official Yellowstone gRPC client
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
tonic = "0.12"

# Database
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Configuration
config = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Concurrent data structures
dashmap = "6.0"
crossbeam = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
once_cell = "1.19"
bytes = "1.7"

# Metrics
prometheus = "0.13"
warp = "0.3"

# HTTP client for RPC
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# For parsing vote instructions
borsh = "1.5"

# URL validation
url = "2.5"

# Random number generation for retry
rand = "0.8"

# Base58 encoding/decoding for signatures
bs58 = "0.5"

# For transaction status parsing
solana-transaction-status = "2.3.1"

# Base64 encoding/decoding
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"
env_logger = "0.11"
hex = "0.4"


[[bin]]
name = "svlm"
path = "src/main.rs"

[[example]]
name = "debug_vote_failure"
path = "examples/debug_vote_failure.rs"